fix: visual bugs on mobile when dragging

--- a/src/typography.css
+++ b/src/typography.css
@@ -56,3 +56,8 @@
 	top: 0;
 	left: 0;
 }
+
+button {
+	-webkit-tap-highlight-color: transparent;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
